# jobber

./: .env.example  .gitignore  .mcp.json  .npmignore  CLAUDE.md  LICENSE  README.md  config.yaml  conftest.py  package.json  pipeline.py  pyproject.toml  registry.py
.claude/: CLAUDE.md
.claude/agents/: matcher.md
.claude/commands/: cover.md  digest.md  onboard.md  profile-edit.md  scan.md  seen-reset.md  sources.md
.claude/docs/: adding-a-source.md  architecture.md  runbook.md  security.md  setup.md  troubleshooting.md
.github/workflows/: ci.yml  publish.yml
core/: CLAUDE.md  config.py  interfaces.py  llm.py  models.py  paths.py  profile.py
cover/: CLAUDE.md  generator.py
digest/: CLAUDE.md  dedup.py  render.py
ingest/: CLAUDE.md  __main__.py  cv_import.py
matching/: CLAUDE.md  classifier.py  prefilter.py
mcp_server/: CLAUDE.md  __main__.py  server.py
profile/: cv.md.template
scripts/: install-schedule.sh  install.sh  mcp-server.sh  run-digest.sh  uninstall-schedule.sh
sources/: CLAUDE.md
sources/linkedin/: source.py
sources/telegram/: CLAUDE.md  __main__.py  client.py  mapping.py  source.py
sources/webboards/: source.py
storage/: CLAUDE.md  store.py
tests/: test_candidates.py  test_classifier.py  test_contact_extraction.py  test_cover.py  test_cv_import.py  test_dedup.py  test_env_io.py  test_ingest_cli.py  test_mcp_server.py  test_pipeline.py  test_prefilter.py  test_registry.py  test_render.py  test_storage.py  test_structure.py  test_telegram_mapping.py  test_telegram_source.py
