[project]
name = "jobber"
version = "1.0.1"
description = "Локальный персональный ассистент поиска работы по Telegram (provider-agnostic)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Telegram user-session клиент (MTProto). Видит личные чаты, группы, каналы, архив.
    "telethon>=1.36",
    # Доменные модели и валидация.
    "pydantic>=2.7",
    # Конфиг.
    "pyyaml>=6.0",
    # Загрузка .env.
    "python-dotenv>=1.0",
    # Парсинг резюме.
    "pypdf>=4.2",            # извлечение текста из PDF (fallback: pdfplumber)
    "python-docx>=1.1",      # парсинг DOCX
    "Pillow>=10.3",          # работа с изображениями (для OCR-fallback)
    # MCP-сервер (stdio) для подключения к Claude Code.
    "mcp>=1.2",
]

[project.optional-dependencies]
ocr = [
    # Программный fallback OCR, если Claude-зрение недоступно (автономный запуск).
    "pytesseract>=0.3.10",   # требует системный бинарь `tesseract`
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "fpdf2>=2.8",            # генерация PDF-фикстур в тестах импорта CV
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Гарантируем импорт top-level модулей (storage/registry/pipeline) независимо от способа
# запуска (console-script `pytest` не добавляет cwd в sys.path, в отличие от `python -m pytest`).
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ingest", "sources", "matching", "cover", "digest", "storage", "mcp_server"]

# Top-level модули (не пакеты) — нужны mcp_server/тестам.
[tool.hatch.build.targets.wheel.force-include]
"registry.py" = "registry.py"
"pipeline.py" = "pipeline.py"
